--- a/moai/conf/model/objectives/mesh/surface_normal_consistency.yaml
+++ b/moai/conf/model/objectives/mesh/surface_normal_consistency.yaml
@@ -1,3 +1,3 @@
 # @package model.objectives.surface_normal_consistency
 
-_target_: moai.supervision.objectives.mesh.surface_normal_consistency.SurfaceNormalConsistency
+_target_: moai.supervision.objectives.mesh.consistency.SurfaceNormalConsistency
