feat: support lossy compression for multiview video export

--- a/moai/conf/model/monitors/exporting/local/multiview_video2d.yaml
+++ b/moai/conf/model/monitors/exporting/local/multiview_video2d.yaml
@@ -4,3 +4,6 @@ _target_: moai.export.local.video2d.MultiviewVideo2d
 path: ???
 extension: mp4
 overwrite: False
+prefix: ''
+suffix: ''
+lossy: false
