feat: parameter groups & splatting monads
+ dsl updates (tanh, sqrt, roll)
! fix: bug in dsl's sub order when using scalar numbers
+ new torch loader kwargs
+ image torchmetrics
+ quat monads
+ adopt optimizer
+ updated parameter selection to support different optimizer kwargs for different params
! fix: zip iterator
+ add rerun config logging
! fix: scheduling for fitting pipelines
+ mode for rerun scalars logging

--- a/moai/conf/model/monads/generation/tensor/named_params.yaml
+++ b/moai/conf/model/monads/generation/tensor/named_params.yaml
@@ -1,4 +1,4 @@
-# @package model.monads._name_
+# @package model.monads.named_params
 
 _target_: moai.monads.generation.tensor.Parameters
 parameters: ???
