--- a/moai/conf/data/train/loader/torch.yaml
+++ b/moai/conf/data/train/loader/torch.yaml
@@ -6,3 +6,7 @@ shuffle: true
 num_workers: ${oc.select:experiment.workers,0}
 pin_memory: false
 drop_last: false
+prefetch_factor: 0
+persistent_workers: false
+pin_memory_device: ""
+# in_order: true
