fix: integrate metric specific flows in test viz
+ various monads/components

--- a/moai/conf/model/components/tcnn/encoding_mlp.yaml
+++ b/moai/conf/model/components/tcnn/encoding_mlp.yaml
@@ -2,6 +2,7 @@
 
 _target_: moai.components.tcnn.modules.EncodingMLP
 input_dims: ???
+hidden_dims: ???
 output_dims: ???
 encoding_config: ???
 seed: ${oc.select:engine.modules.manual_seed.seed,1337}
